# ros2-mcp-server

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_PLAN.md  LICENSE  PROJECT_STRUCTURE.txt  README.md  SECURITY.md  install.sh  pyproject.toml  run_tests.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: BENCHMARKS.md  CLIENT_SETUP.md  WORLD_FIRST_FEATURES.md
examples/: tune_pid_with_claude.py
ros2_mcp/: __init__.py  ros2_interface.py  sandbox.py  server.py
ros2_mcp/tools/: __init__.py  diagnostics.py  nodes.py  params.py  pid.py  spatial.py  swarm.py  topics.py  trajectory.py
test/: __init__.py  test_server.py
tests/: test_server.py
