[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2-mcp-server"
version = "1.1.0"
description = "Model Context Protocol (MCP) server for ROS2 — connect Claude, Antigravity, and AI agents to real robots"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abdullah Bin Zafar", email = "abz.king.1.9.2003@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "ros2", "mcp", "model-context-protocol", "claude", "ai-agents",
    "robotics", "autonomous-systems", "embedded-systems", "llm",
    "pid-tuning", "sensor-fusion", "openai", "antigravity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
# No mandatory dependencies beyond the stdlib —
# rclpy is part of the ROS2 installation, not a pip package.
dependencies = []

[project.optional-dependencies]
rosbridge = ["websocket-client>=1.6.0"]
dev       = ["pytest>=7.4", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
ros2-mcp-server = "ros2_mcp.server:main"

[project.urls]
Homepage      = "https://github.com/EngineerAbdullahBinZafar/ros2-mcp-server"
Documentation = "https://github.com/EngineerAbdullahBinZafar/ros2-mcp-server#readme"
"Bug Tracker" = "https://github.com/EngineerAbdullahBinZafar/ros2-mcp-server/issues"
"Source Code" = "https://github.com/EngineerAbdullahBinZafar/ros2-mcp-server"

[tool.setuptools.packages.find]
where = ["."]
include = ["ros2_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
